--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 html {
@@ -16,5 +17,17 @@ body {
 main {
   width: 100%;
   height: 100%;
-  background-color: gray;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  form {
+    height: 500px;
+    width: 500px;
+    border-radius: 6px;
+    background-color: rgb(192, 192, 192);
+    padding: 1rem;
+    font-size: 1rem;
+  }
 }
