--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,6 @@
   margin: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-html {
   font-size: 16px;
 }
 
@@ -23,11 +20,31 @@ main {
   align-items: center;
 
   form {
-    height: 500px;
-    width: 500px;
+    height: 450px;
+    width: 400px;
     border-radius: 6px;
     background-color: rgb(192, 192, 192);
     padding: 1rem;
     font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    h1 {
+      font-size: 2rem;
+    }
+
+    input {
+      padding: 0.2rem;
+      font-size: 1rem;
+      width: 100%;
+      border-radius: 3px;
+      border: none;
+    }
+
+    #submit-button {
+      height: 50px;
+      width: 100%;
+    }
   }
 }
